--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,76 @@
+ <div class="banner">
+        <div class="navbar">
+            <img src="/images/LOGO_NEW.png" class="logo">
+            <ul>
+                <li><a href="#">National News</a></li>
+                <li><a href="#">State News</a></li>
+                <li><a href="#">Rate</a></li>
+                <li><a href="#">Sentiment Analysis</a></li>
+                <li><a href="/auth/google">Login with Google</a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <h1>GET OUR OPINION</h1>
+            <p>Confused about what political party to vote for?
+                Need Advice?<br />Don't worry we have got your back!!
+            </p>
+            <div>
+                <button type="button"><span></span>GET STARTED</button>
+                <button type="button"><span></span>ABOUT US</button>
+            </div>
+        </div>
+    </div>
+    <section class="aboutus">
+        <div class="content-about">
+            <h2>About the app</h2>
+            <p>
+                With the advancement in the Internet Technology, many people have
+                started connecting to social networking websites and are using these microblogging websites to
+                publically share their views on various issues such as
+                politics, celebrity or services like ecommerce. Twitter is one of those very
+                popular micro-blogging website having 328 million of users around the world
+                who posts 500 million of tweets per day to share their views. These tweets are
+                rich source of opinionated USER GENERATED CONTENT (UGC) that can be
+                used for effective studies and can produce beneficial results.
+                <br><br>
+                Sentiment Analysis is the process of analyzing if a piece of online writing (social media posts, comments) is positive, negative or neutral. Significant progress has been made in the field of Sentiment Analysis in the past few years, this technique has been largely used in Business and Politics.
+            </p>
+        </div>
+        <img src="/images/sentiment_img.jpg" alt="">
+    </section>
+    <section class="contact">
+        <h2>Contact Us</h2>
+        <p>For any queries please feel free to reach out to us. We will try our best to respond to your queries!!!!</p>
+        <div class="contact-div">
+            <img src="/images/contact.png" alt="">
+            <form>
+                <input type="text" placeholder="Enter your name">
+                <input type="email" placeholder="Enter your email">
+                <input type="text" placeholder="Enter your phone">
+                <textarea placeholder="Enter your question"></textarea>
+                <button>Submit</button>
+            </form>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="footer-content">
+            <h3>The Politcal Monger</h3>
+            <p>Please visit the following tags to get more insight into how we function and please follow us on the below handles</p>
+            <ul class="socials">
+            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>copyright &copy;2021. designed by The Political Monger</p>
+        </div>
+   </section>
+
+
+<!--
 <h3><i class="fas fa-book-reader"></i> StoryBooks</h3>
 <div class="section">
     <p class="lead">Create public and private stories from your life</p>
@@ -7,4 +80,4 @@
     <a href="/auth/google" class="btn red darken-1">
         <i class="fab fa-google left"></i> Log In With Google
     </a>
-</div>
+</div>-->
