--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -7,17 +7,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
         integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/css/style.css">
-    <title>StoryBooks Login</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/LandingPage.css">
+    <title>No auth Landing</title>
 </head>
 
 <body>
-    <div class="container login-container">
-        <div class="card">
+    <div class="container-login">
+         {{{body}}}
+        <!--<div class="login-container">
+            <div class="card">
             <div class="card-content">
-                {{{body}}}
+               
             </div>
         </div>
+        </div>-->
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
