--- a/views/state-news.hbs
+++ b/views/state-news.hbs
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>  
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>   
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   
     <title>State news</title>
     <link rel="stylesheet" href="/css/news.css">
     <style>
@@ -24,6 +23,12 @@
         {{> _header}}
         <section>
 <div class="container">
+  
+  <form class="form-inline" style="width:100%; background-color:#72d6f56c; border:1px solid #4fd4fc6c; border-radius:2px;">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search state" aria-label="Search" id="state">
+    <button class="btn btn-outline-success my-2 my-sm-0" onclick="getState()" type="button">Search</button>
+  </form>
+
   <div class="row text-center">
     <div class="col-md-4 card-container">
       <div class="card card-flip">
@@ -136,6 +141,9 @@
     </div>
         </section> 
     </div>
+     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="../js/state-news.js"></script>
     <script src="../js/news.js"></script>
 </body>
