--- a/views/rating.hbs
+++ b/views/rating.hbs
@@ -14,7 +14,7 @@
     <div class="row">
         <div class="column">
        
-        <h1>Rate your favourite parties!</h1>
+        <h2>Rate your favourite parties</h2>
         <form method="post" class="rate-form">
             <div class="txt_field">
                 <input type="text" placeholder=" " id="name" required>
@@ -39,20 +39,18 @@
             <div class="form-group">
             <input type="number" id="rating-control" class="form-control" step="0.1" max="5" placeholder="Rate 1 - 5" disabled>
            </div>
-
             </div>
             <br>
-            
-            <button type="button">Submit</button>
+            <button type="button" id="rating-submit">Submit</button>
         </form>
        
       </div>
       <div class="column">
          <div class="rating-results-user">
-             <h1 style="margin-left: -50px;">View public ratings: </h1>
+             <h2 style="margin-right:150px;">View Your Ratings</h2>
            <!--rating table-->
            
-  <table class="table table-striped" style="width:80%;">
+  <table class="table table-striped" style="width:80%;background-color:white;">
     <thead>
       <tr>
         <th>Party Name</th>
