added search bar

--- a/views/state-news.hbs
+++ b/views/state-news.hbs
@@ -25,7 +25,7 @@
 <div class="container">
   
   <form class="form-inline" style="width:100%; background-color:#72d6f56c; border:1px solid #4fd4fc6c; border-radius:2px;">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search state" aria-label="Search" id="state">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search state or city" aria-label="Search" id="state">
     <button class="btn btn-outline-success my-2 my-sm-0" onclick="getState()" type="button">Search</button>
   </form>
 
