--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -55,7 +55,7 @@
                 <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </div>
-        <div class="footer-bottom">
+        <div class="footer-bottom" style="height:2em;">
             <p>copyright &copy;2021. designed by The Political Monger</p>
         </div>
    </section>
