--- a/views/rating.hbs
+++ b/views/rating.hbs
@@ -109,6 +109,9 @@
          </div>
       </div>
     </div>
+    <div class="footer-bottom" style="height:2em;">
+            <p>copyright &copy;2021. designed by The Political Monger</p>
+    </div>
 </div>
 
 <script src="/js/rating.js"></script>
