--- a/views/state-news.hbs
+++ b/views/state-news.hbs
@@ -33,7 +33,7 @@
     <div class="col-md-4 card-container">
       <div class="card card-flip">
         <div class="front card-block">
-          <img src="https://www.thehindu.com/elections/tamil-nadu-assembly/4h6wik/article34465505.ece/ALTERNATES/LANDSCAPE_615/Stalin" alt="" class="news-card-img">
+          <img src="https://www.thehindu.com/elections/tamil-nadu-assembly/4h6wik/article34465505.ece/ALTERNATES/LANDSCAPE_615/Stalin" alt="" class="news-card-img" id="img0">
           <h5 class="card-img-title">Live Updates: Biden and Congress Prepare for an Unusual Speech</h5>
         </div>
         <div class="back card-block">
@@ -50,7 +50,7 @@
     <div class="col-md-4 card-container">
       <div class="card card-flip">
         <div class="front card-block">
-          <img src="https://images.indianexpress.com/2021/04/poll-vanathi-3col.jpg" alt="" class="news-card-img">
+          <img src="https://images.indianexpress.com/2021/04/poll-vanathi-3col.jpg" alt="img2" id="img1" class="news-card-img">
           <h5 class="card-img-title">Vote count in five Indian states begin amid pandemic</h5>
         </div>
         <div class="back card-block">
@@ -68,7 +68,7 @@
     <div class="col-md-4 card-container">
       <div class="card card-flip">
         <div class="front card-block">
-          <img src="https://images.indianexpress.com/2021/05/stalin-1.jpg" alt="" class="news-card-img">
+          <img src="https://images.indianexpress.com/2021/05/stalin-1.jpg" alt="img2" id="img2" class="news-card-img">
           <h5 class="card-img-title">Card title here</h5>
         </div>
         <div class="back card-block">
@@ -86,7 +86,7 @@
     <div class="col-md-4 card-container">
       <div class="card card-flip">
         <div class="front card-block">
-          <img src="https://images.indianexpress.com/2021/04/sasikala-1.jpg" alt="" class="news-card-img">
+          <img src="https://images.indianexpress.com/2021/04/sasikala-1.jpg" alt="img3" id="img3" class="news-card-img">
           <h5 class="card-img-title">Card title here</h5>
         </div>
         <div class="back card-block">
@@ -104,7 +104,7 @@
     <div class="col-md-4 card-container">
       <div class="card card-flip">
         <div class="front card-block">
-          <img src="https://images.indianexpress.com/2021/04/Trending-card-02-1.jpg" alt="" class="news-card-img">
+          <img src="https://images.indianexpress.com/2021/04/Trending-card-02-1.jpg" alt="img4" id="img4" class="news-card-img">
           <h5 class="card-img-title">Card title here</h5>
         </div>
         <div class="back card-block">
@@ -122,7 +122,115 @@
     <div class="col-md-4 card-container">
       <div class="card card-flip">
         <div class="front card-block">
-          <img src="https://www.thehindu.com/opinion/op-ed/gxsqvp/article34239014.ece/ALTERNATES/LANDSCAPE_615/5ththoothukudi" alt="" class="news-card-img">
+          <img src="https://www.thehindu.com/opinion/op-ed/gxsqvp/article34239014.ece/ALTERNATES/LANDSCAPE_615/5ththoothukudi" alt="img5" id="img5" class="news-card-img">
+          <h5 class="card-img-title">Card title here</h5>
+        </div>
+        <div class="back card-block">
+          <p class="card-author"><b>Published by:</b>
+            <p class="card-author-content">Investor's Business Daily</p>
+          </p>
+          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
+          <p class="card-description">
+            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
+          </p>
+          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
+        </div>
+      </div>
+    </div>
+         <div class="col-md-4 card-container">
+      <div class="card card-flip">
+        <div class="front card-block">
+          <img src="https://www.thehindu.com/opinion/op-ed/gxsqvp/article34239014.ece/ALTERNATES/LANDSCAPE_615/5ththoothukudi" alt="img6" id="img6" class="news-card-img">
+          <h5 class="card-img-title">Card title here</h5>
+        </div>
+        <div class="back card-block">
+          <p class="card-author"><b>Published by:</b>
+            <p class="card-author-content">Investor's Business Daily</p>
+          </p>
+          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
+          <p class="card-description">
+            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
+          </p>
+          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
+        </div>
+      </div>
+    </div>
+         <div class="col-md-4 card-container">
+      <div class="card card-flip">
+        <div class="front card-block">
+          <img src="https://www.thehindu.com/opinion/op-ed/gxsqvp/article34239014.ece/ALTERNATES/LANDSCAPE_615/5ththoothukudi" alt="img7" id="img7" class="news-card-img">
+          <h5 class="card-img-title">Card title here</h5>
+        </div>
+        <div class="back card-block">
+          <p class="card-author"><b>Published by:</b>
+            <p class="card-author-content">Investor's Business Daily</p>
+          </p>
+          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
+          <p class="card-description">
+            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
+          </p>
+          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
+        </div>
+      </div>
+    </div>
+          <div class="col-md-4 card-container">
+      <div class="card card-flip">
+        <div class="front card-block">
+          <img src="https://www.thehindu.com/opinion/op-ed/gxsqvp/article34239014.ece/ALTERNATES/LANDSCAPE_615/5ththoothukudi" alt="img8" id="img8" class="news-card-img">
+          <h5 class="card-img-title">Card title here</h5>
+        </div>
+        <div class="back card-block">
+          <p class="card-author"><b>Published by:</b>
+            <p class="card-author-content">Investor's Business Daily</p>
+          </p>
+          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
+          <p class="card-description">
+            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
+          </p>
+          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
+        </div>
+      </div>
+    </div>
+        <div class="col-md-4 card-container">
+      <div class="card card-flip">
+        <div class="front card-block">
+          <img src="https://www.thehindu.com/opinion/op-ed/gxsqvp/article34239014.ece/ALTERNATES/LANDSCAPE_615/5ththoothukudi" alt="img9" id="img9" class="news-card-img">
+          <h5 class="card-img-title">Card title here</h5>
+        </div>
+        <div class="back card-block">
+          <p class="card-author"><b>Published by:</b>
+            <p class="card-author-content">Investor's Business Daily</p>
+          </p>
+          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
+          <p class="card-description">
+            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
+          </p>
+          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
+        </div>
+      </div>
+    </div>
+         <div class="col-md-4 card-container">
+      <div class="card card-flip">
+        <div class="front card-block">
+          <img src="https://www.thehindu.com/opinion/op-ed/gxsqvp/article34239014.ece/ALTERNATES/LANDSCAPE_615/5ththoothukudi" alt="img10" id="img10" class="news-card-img">
+          <h5 class="card-img-title">Card title here</h5>
+        </div>
+        <div class="back card-block">
+          <p class="card-author"><b>Published by:</b>
+            <p class="card-author-content">Investor's Business Daily</p>
+          </p>
+          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
+          <p class="card-description">
+            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
+          </p>
+          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
+        </div>
+      </div>
+    </div>
+        <div class="col-md-4 card-container">
+      <div class="card card-flip">
+        <div class="front card-block">
+          <img src="https://www.thehindu.com/opinion/op-ed/gxsqvp/article34239014.ece/ALTERNATES/LANDSCAPE_615/5ththoothukudi" alt="img11" id="img11" class="news-card-img">
           <h5 class="card-img-title">Card title here</h5>
         </div>
         <div class="back card-block">
@@ -140,6 +248,9 @@
       </div>
     </div>
         </section> 
+        <div class="footer-bottom" style="height:2em;">
+            <p>copyright &copy;2021. designed by The Political Monger</p>
+        </div>
     </div>
      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
