--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,17 +1,17 @@
  <div class="banner">
        {{> _header}}
         <div class="content">
-            <h1>GET OUR OPINION</h1>
+            <h1>Welcome, {{name}} !</h1>
             <p>Confused about what political party to vote for?
-                Need Advice?<br />Don't worry we have got your back!!
+                Need Advice?<br />Don't worry we've got your back!!
             </p>
             <div>
-                <button type="button"><span></span>GET STARTED</button>
-                <button type="button"><span></span>ABOUT US</button>
+                <button type="button"><a href="/rating" style="text-decoration: none;"></a>GET STARTED</button>
+                <button type="button"><a href="#aboutus" style="text-decoration: none;">ABOUT US</a></button>
             </div>
         </div>
     </div>
-    <section class="aboutus">
+    <section class="aboutus" id="aboutus">
         <div class="content-about">
             <h2>About the app</h2>
             <p>
