sentiment analysis logic added

--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -6,7 +6,7 @@
                   <li><a href="/national-news">National News</a></li>
                   <li><a href="/state-news">State News</a></li>
                   <li><a href="/rating">Rate</a></li>
-                  <li><a href="#">Sentiment Analysis</a></li>
+                  <li><a href="/sentiment">Sentiment Analysis</a></li>
                   <li><a href="/auth/logout">Logout</a></li>
               </ul>
           </div>
