--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,10 +2,10 @@
         <div class="navbar">
             <img src="/images/LOGO_NEW.png" class="logo">
             <ul>
-                <li><a href="#">National News</a></li>
-                <li><a href="#">State News</a></li>
-                <li><a href="#">Rate</a></li>
-                <li><a href="#">Sentiment Analysis</a></li>
+                <li><a href="/auth/google">National News</a></li>
+                <li><a href="/auth/google">State News</a></li>
+                <li><a href="/auth/google">Rate</a></li>
+                <li><a href="/auth/google">Sentiment Analysis</a></li>
                 <li><a href="/auth/google">Login with Google</a></li>
             </ul>
         </div>
