--- a/views/news.hbs
+++ b/views/news.hbs
@@ -12,236 +12,26 @@
     <style>
         .bg-custom-1 {
        background-color: #85144b;
-   }
+        }
 
-   .bg-custom-2 {
-   background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
-   }
+           .bg-custom-2 {
+         background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+      }
     </style>  
 </head>
 <body>
     <div class="main-container">
         {{> _header}}
         <section>
-<div class="container">
-  <div class="row text-center">
-    <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://static01.nyt.com/images/2021/05/16/us/politics/16new-washington-briefing-monday-lede/16new-washington-briefing-monday-lede-facebookJumbo.jpg" alt="img0" id="img0" class="news-card-img">
-          <h5 class="card-img-title">Live Updates: Biden and Congress Prepare for an Unusual Speech</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">The New York Times</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">2021-04-26T12:48:13Z</p></p>
-          <p class="card-description">
-            A presidents address to a joint session of Congress is typically a crowded affair, as lawmakers from both parties and their guests pack the House floor. But President Bidens speech on Wednesday, his          </p>
-          <a href="https://www.nytimes.com/live/2021/04/26/us/biden-news-today" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.reuters.com/resizer/jHD2HZQh-YtIvHbrbF5oEgYzuiw=/1200x628/smart/cloudfront-us-east-2.images.arcpublishing.com/reuters/WJJHJA3BCVIEHCR6RBYFQL7FMQ.jpg" alt="img1" id="img1" class="news-card-img">
-          <h5 class="card-img-title">Vote count in five Indian states begin amid pandemic</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.reuters.com/resizer/w7X3davAr7MhFxoV6mv5jiR__X0=/1200x628/smart/cloudfront-us-east-2.images.arcpublishing.com/reuters/4EIPPZCQVJMW5P5FKHTNL5XOYE.jpg" alt="img2" id="img2" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b> <p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.reuters.com/resizer/Z-D3dZepEHRx9HtN293glVXJfBw=/1200x628/smart/cloudfront-us-east-2.images.arcpublishing.com/reuters/V7KKGDCBDNNTNBSWAX7AFWX4IY.jpg" alt="img3" id="img3" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at: </b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://static01.nyt.com/images/2021/04/23/world/23virus-briefing-india-oxygen-1/23virus-briefing-india-oxygen-1-facebookJumbo.jpg" alt="img4" id="img4" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at: </b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.reuters.com/resizer/T1CRVer77kqmCtcevODaElBfBnE=/1200x628/smart/cloudfront-us-east-2.images.arcpublishing.com/reuters/KWW764QYLVOJ3KBOUNMYRTLGUI.jpg" alt="img5" id="img5" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-	  <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.reuters.com/resizer/T1CRVer77kqmCtcevODaElBfBnE=/1200x628/smart/cloudfront-us-east-2.images.arcpublishing.com/reuters/KWW764QYLVOJ3KBOUNMYRTLGUI.jpg" alt="img6" id="img6" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-         <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.reuters.com/resizer/T1CRVer77kqmCtcevODaElBfBnE=/1200x628/smart/cloudfront-us-east-2.images.arcpublishing.com/reuters/KWW764QYLVOJ3KBOUNMYRTLGUI.jpg" alt="img7" id="img7" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-         <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.reuters.com/resizer/T1CRVer77kqmCtcevODaElBfBnE=/1200x628/smart/cloudfront-us-east-2.images.arcpublishing.com/reuters/KWW764QYLVOJ3KBOUNMYRTLGUI.jpg" alt="img8" id="img8" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-	  <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.reuters.com/resizer/T1CRVer77kqmCtcevODaElBfBnE=/1200x628/smart/cloudfront-us-east-2.images.arcpublishing.com/reuters/KWW764QYLVOJ3KBOUNMYRTLGUI.jpg" alt="img9" id="img9" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-	  <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.reuters.com/resizer/T1CRVer77kqmCtcevODaElBfBnE=/1200x628/smart/cloudfront-us-east-2.images.arcpublishing.com/reuters/KWW764QYLVOJ3KBOUNMYRTLGUI.jpg" alt="img10" id="img10" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-	  <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.reuters.com/resizer/T1CRVer77kqmCtcevODaElBfBnE=/1200x628/smart/cloudfront-us-east-2.images.arcpublishing.com/reuters/KWW764QYLVOJ3KBOUNMYRTLGUI.jpg" alt="img11" id="img11" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-      </div>
-    </div>
+         <div class="row">
+           <div class="container">
+            <div class="row text-center" id="newsResults"></div>
+          </div>
+		    </div>
+         <div class="loading">
+           <div class="loader"></div>
+			   </div>
+	    	</div>
         </section>
         <div class="footer-bottom" style="height:2em;">
             <p>copyright &copy;2021. designed by The Political Monger</p>
